flux/apps/jellyseerr/httproute.enc.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: multimedia-factory
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: system-addon
  hostnames:
  - ENC[AES256_GCM,data:iqPOk3g+VW3Du/ZZmH9gS75Z8WoA5NAKsRy81anSDP4=,iv:jrexQrZHSPl/oWmEOMakl0A7TMX1EeU7jOydkh/bxvs=,tag:aLSuPiYGE21GNIz5RQk+iQ==,type:str]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jellyseerr
      port: 5055
sops:
  age:
  - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
    enc: '-----BEGIN AGE ENCRYPTED FILE-----

      YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnMXl6M0pzcU16eS9aQWdV

      dWkwNjFXYnJEdFM1N1FKK1ZhZnlhWWpoZVY0ClhSY1c2dllNdEpzcjY1RnhBazFU

      bUt2UFV1bWxlWHpINE0vNGZRR1ZXeEEKLS0tIDRLY0NQd3dLNkNJR1VMaytYNGgw

      Z0xlZFU2R1JKU29XTWdaMWxTWFhlMk0KPHmmxikbSZ6R9febpPkOCe4d92yC2qCV

      O39D3ATFByraBZeh4CddUOV0DjFuDNCVpnGXoPtXZTpV7MuSdGoUUQ==

      -----END AGE ENCRYPTED FILE-----

      '
  lastmodified: '2025-12-30T09:38:37Z'
  mac: ENC[AES256_GCM,data:nfSBbkzIyRix7kuSdOdtwam11+tyb6lvIy6UFC1htWiiVhIk52hD4xEbVpxiTBQAYZ0zeufQZdw00sNAIPjTT7hVEij/XnQmeA2S3xSpg4aszIp9niQJUNkxydN00YZpCJiJSwjm4Q9CedFQERmL6fsQYHNEBCewgeBRLuEkhIo=,iv:dXiVgbPdztvNmhBU9/Qun/vBzny+zySXrZuOqxb3TZ4=,tag:ES5+fKo9WbseIXXeuKp/Sw==,type:str]
  encrypted_regex: hostnames|0
  version: 3.11.0
